clusters/sirius/apps/deaddrop-downloader/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deaddrop-downloader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deaddrop-downloader
  template:
    metadata:
      labels:
        app: deaddrop-downloader
    spec:
      containers:
        - name: deaddrop-downloader
          image: ghcr.io/moonblade/audiobookbay-downloader:ts_1742530767 # {"$imagepolicy": "deaddrop-downloader:deaddrop-downloader"}
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: deaddrop-config
              mountPath: /config
          readinessProbe:
            exec:
              command: ["test", "-f", "/config/DONOTDELETE"]
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: deaddrop-config
          hostPath:
            path: /mnt/secondary/config/deaddrop-downloader
            type: DirectoryOrCreate
