clusters/sirius/apps/deaddrop-downloader/jackett.yaml
apiVersion: v1
kind: Service
metadata:
  name: jackett
spec:
  type: ExternalName
  externalName: jackett.jackett.svc.cluster.local
