clusters/sirius/apps/deaddrop-downloader/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deaddrop-downloader
spec:
  selector:
    app: deaddrop-downloader
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
      name: http
  type: ClusterIP
