clusters/sirius/apps/deaddrop-downloader/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: deaddrop-downloader
    app.kubernetes.io/name: deaddrop-downloader
  annotations:
   cert-manager.io/cluster-issuer: default-clusterissuer
  name: deaddrop-ingress
spec:
  tls:
  - hosts:
    - dd.sirius.moonblade.work
    secretName: deaddrop-cert
  rules:
  - host: dd.sirius.moonblade.work
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: deaddrop-downloader
            port:
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: deaddropext
spec:
  type: ExternalName
  externalName: ak-outpost-deaddrop.authentik.svc.cluster.local
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookbay-outer
spec:
  rules:
    - host: ddsearch.moonblade.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: deaddropext
                port:
                  number: 9000
